add proxima nova font

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div><a href="#"><span>Navigation</span> Link Two</a></div>
       <div><a href="#"><span>Navigation</span> Link Three</a></div>
     </nav>
-    <h1>Do the right thing</h1>
+    <h1 class="proxima-nova-bold">Do the right thing</h1>
   </header>
   <section>
     <h1>
